--- a/style.css
+++ b/style.css
@@ -16,6 +16,11 @@ body {
     min-height: 100vh;
 }
 
+p:hover {
+    color: green; 
+    font-weight: bold;
+}
+
 .caixa-principal{
     background-color: var(--cor-principal);
     width: 90%;
