--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ body {
     text-align: center;
     padding: 20px;
     border: 2px solid #5BBE42;
+    border: 3px solid greenyellow;
     animation: borderTransition 2s infinite alternate; 
 }
 
