--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ body {
     text-align: center;
     padding: 20px;
     border: 2px solid #5BBE42;
-    border: 3px solid greenyellow;
+    border-radius: 10px;
     animation: borderTransition 2s infinite alternate; 
 }
 
