--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 }
 
 body {
-    background-color: var(--cor-fundo);
+
     color: var(--cor-texto);
     display: flex;
     justify-content: center;
@@ -22,8 +22,8 @@ body {
     max-width: 600px;
     text-align: center;
     padding: 20px;
-    border: 2px solid #5BBE42;
     border-radius: 10px;
+    border: 4px solid #5BBE42;
     animation: borderTransition 2s infinite alternate; 
 }
 
@@ -71,6 +71,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
+    background: url('bg-desktop.webp');
 }
 
 p:hover {
@@ -82,8 +83,8 @@ p:hover {
     display: flex;
     align-items: center;
     justify-content: space-around;
-    height: 200px;
-    width: 550px;
+    height: 50%;
+    width: 100%;
     background: transparent;
     border-radius: 3px;
     box-shadow: 0px 8px 10px rgba(0, 0, 0, .5);
@@ -124,7 +125,7 @@ header img {
 }
 
 h1 {
-    color: #5BBE42;
+    color: greenyellow;
 }
 
 
@@ -141,7 +142,7 @@ footer {
 footer a {
     margin: 20px;
     text-align: center;
-    color: green;
+    color: rgb(83, 217, 83);
 }
 a {
     text-decoration: none;
@@ -150,3 +151,4 @@ a {
 footer p {
     margin-top: 2px;
 }
+
